chore :lipstick: se añade href a todas las imagenes

--- a/src/views/home_cine.html
+++ b/src/views/home_cine.html
@@ -31,40 +31,48 @@
         </div>
         <div class="movie-carousel">
             <div class="movie-item">
-                <img src="../storage/img/Wish-cartel.webp">
-                <p class="movie-title">Wish</p>
-                <p class="movie-genre">Animación, Comedia Musical</p>
+                <a href="/cinema_selection">
+                    <img src="../storage/img/Wish-cartel.webp" alt="Wish">
+                </a>
+                    <p class="movie-title">Wish</p>
+                    <p class="movie-genre">Animación, Comedia Musical</p>
             </div>
             <div class="movie-item">
                 <a href="/cinema_selection">
-                    <img src="../storage/img/alien.jpg">
+                    <img src="../storage/img/alien.jpg" alt="Alien Romulus">
                 </a>
                     <p class="movie-title">Alien Romulus</p>
                     <p class="movie-genre">Ciencia Ficción, Horror</p>
             </div>
             <div class="movie-item">
-                <img src="../storage/img/2385575.webp">
-                <p class="movie-title">Dune: Part Two</p>
-                <p class="movie-genre">Ciencia Ficción</p>
+                <a href="/cinema_selection">
+                    <img src="../storage/img/2385575.webp" alt="Dune: Part Two">
+                </a>
+                    <p class="movie-title">Dune: Part Two</p>
+                    <p class="movie-genre">Ciencia Ficción</p>
             </div>
             <div class="movie-item">
-                <img src="../storage/img/Garfield.jpg">
-                <p class="movie-title">Garfield</p>
-                <p class="movie-genre">Comedia, Familiar</p>
+                <a href="/cinema_selection">
+                    <img src="../storage/img/Garfield.jpg" alt="Garfield">
+                </a>
+                    <p class="movie-title">Garfield</p>
+                    <p class="movie-genre">Comedia, Familiar</p>
             </div>
             <div class="movie-item">
-                <img src="../storage/img/guason.jpg">
-                <p class="movie-title">Joker: Folie à Deux</p>
-                <p class="movie-genre">Crimen, Thriller</p>
+                <a href="/cinema_selection">
+                    <img src="../storage/img/guason.jpg" alt="Joker: Folie à Deux">
+                </a>
+                    <p class="movie-title">Joker: Folie à Deux</p>
+                    <p class="movie-genre">Crimen, Thriller</p>
             </div>
         </div>
         <div class="carousel-indicators">
             <span class="dot active" data-index="0" aria-label="Slide 1"></span>
             <span class="dot" data-index="1" aria-label="Slide 2"></span>
             <span class="dot" data-index="2" aria-label="Slide 3"></span>
-
         </div>
     </section>
+    
 
     <section class="coming-soon">
         <div class="section-header">
