--- a/src/views/home_cine.html
+++ b/src/views/home_cine.html
@@ -20,51 +20,19 @@
             </div>
         </div>
     </header>
+    
     <section class="search-section">
         <input type="text" class="search-bar" placeholder="Search movie, cinema, genre...">
         <img src="../storage/img/Vector (2).svg" class="search-icon">
     </section>
+
     <section class="now-playing">
         <div class="section-header">
             <h3>Now playing</h3>
             <a href="#" class="see-all">See all</a>
         </div>
         <div class="movie-carousel">
-            <div class="movie-item">
-                <a href="/cinema_selection">
-                    <img src="../storage/img/Wish-cartel.webp" alt="Wish">
-                </a>
-                    <p class="movie-title">Wish</p>
-                    <p class="movie-genre">Animación, Comedia Musical</p>
-            </div>
-            <div class="movie-item">
-                <a href="/cinema_selection">
-                    <img src="../storage/img/alien.jpg" alt="Alien Romulus">
-                </a>
-                    <p class="movie-title">Alien Romulus</p>
-                    <p class="movie-genre">Ciencia Ficción, Horror</p>
-            </div>
-            <div class="movie-item">
-                <a href="/cinema_selection">
-                    <img src="../storage/img/2385575.webp" alt="Dune: Part Two">
-                </a>
-                    <p class="movie-title">Dune: Part Two</p>
-                    <p class="movie-genre">Ciencia Ficción</p>
-            </div>
-            <div class="movie-item">
-                <a href="/cinema_selection">
-                    <img src="../storage/img/Garfield.jpg" alt="Garfield">
-                </a>
-                    <p class="movie-title">Garfield</p>
-                    <p class="movie-genre">Comedia, Familiar</p>
-            </div>
-            <div class="movie-item">
-                <a href="/cinema_selection">
-                    <img src="../storage/img/guason.jpg" alt="Joker: Folie à Deux">
-                </a>
-                    <p class="movie-title">Joker: Folie à Deux</p>
-                    <p class="movie-genre">Crimen, Thriller</p>
-            </div>
+            <!-- Las películas se agregarán aquí dinámicamente -->
         </div>
         <div class="carousel-indicators">
             <span class="dot active" data-index="0" aria-label="Slide 1"></span>
@@ -73,31 +41,16 @@
         </div>
     </section>
     
-
     <section class="coming-soon">
         <div class="section-header">
             <h3>Coming soon</h3>
             <a href="#" class="see-all">See all</a>
         </div>
         <div class="movie-carousel">
-            <div class="movie-item">
-                <img src="../storage/img/Rectangle 4170.jpg">
-                <p class="movie-title">Gato con botas(2023)</p>
-            </div>
-            <div class="movie-item">
-                <img src="../storage/img/oppenheimer.jpg">
-                <p class="movie-title">Oppenheimer</p>
-            </div>
-            <div class="movie-item">
-                <img src="../storage/img/kill.jpg">
-                <p class="movie-title">Kill</p>
-            </div>
-            <div class="movie-item">
-                <img src="../storage/img/the-marvels-poster-internacional.jpg">
-                <p class="movie-title">The Marvels</p>
-            </div>
+            <!-- Las películas se agregarán aquí dinámicamente -->
         </div>
     </section>
+
     <footer class="footer">
         <nav class="footer-nav">
             <div class="footer-item">
