chore :lipstick: corrigo error de redireccion en el choose_seat.html

--- a/src/views/choose_seat.html
+++ b/src/views/choose_seat.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="/cinema_selection">
+        <a href="/home_cine">
             <img id="back" src="../storage/img/Back.svg" alt="Back icon">
         </a>
         <h1>Choose Seat</h1>
