feat :sparkles: se crea funcion que muestra en el order_summary los datos reales
guarde los datos en las coookies y localstorage para despues llamarlos en el archivo de oder_summary creando id a los div e importando la data de las cookies creadas

--- a/src/views/oder_summary.html
+++ b/src/views/oder_summary.html
@@ -20,12 +20,12 @@
 
     <main class="summary-container">
         <section class="movie-info">
-            <img src="../storage/img/alien.jpg" alt="Puss in Boots Movie Poster" class="movie-poster">
+            <img src="../storage/img/alien.jpg" alt="Movie Poster" class="movie-poster" id="movie-poster">
             <div class="movie-details">
-                <h2>Alien Romulus</h2>
-                <p>Accion</p>
+                <h2 id="movie-title">Título de la película</h2>
+                <p id="movie-genre">Género de la película</p>
                 <p><strong>Auditorio Campus</strong></p>
-                <p>Sun, 12 Feb 2023. 13:00</p>
+                <p id="movie-date">Fecha y hora</p>
             </div>
         </section>
 
@@ -46,6 +46,7 @@
                 </div>
             </div>
         </section>
+        
 
         <section class="payment-method">
             <h3>Payment method</h3>
