chore :wrench: se ajustan las funciones de crear usuario
quite los value de la plantilla y lo hice mas dinamico

--- a/src/views/create_account.html
+++ b/src/views/create_account.html
@@ -21,13 +21,13 @@
 
           <div class="input-field">
             <label for="nombre">Name:</label>
-            <input type="text" id="nombre" name="nombre" required placeholder="Your First Name" value="william"> 
+            <input type="text" id="nombre" name="nombre" required placeholder="Your First Name" > 
           </div>
       
       
           <div class="input-field">
             <label for="nick">Username:</label>
-            <input type="text" id="nick" name="nick" required placeholder="Your Username" value="williamjair"> 
+            <input type="text" id="nick" name="nick" required placeholder="Your Username"> 
           </div>
       
           <div class="input-field">
@@ -37,12 +37,12 @@
       
           <div class="input-field">
             <label for="telefono">Phone Number:</label>
-            <input type="text" id="telefono" name="telefono" placeholder="Your Phone Number" value="313400888"> 
+            <input type="text" id="telefono" name="telefono" placeholder="Your Phone Number"> 
           </div>
       
           <div class="input-field">
             <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required placeholder="Your Password" value="123456">
+            <input type="password" id="password" name="password" required placeholder="Your Password">
           </div>
       
           <div class="forgot-password">
