--- a/src/views/ticket.html
+++ b/src/views/ticket.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="/oder_summary">
+        <a href="/home_cine">
             <img id="back" src="../storage/img/Back.svg" alt="back icon">
         </a>
         <h1>Cinema Selection</h1>
