chore :wrench: se ajusta para que cambie estado al seleccionar el dia
poniedole indentificador a los div de los asientos

--- a/src/css/choose_seat.css
+++ b/src/css/choose_seat.css
@@ -215,6 +215,10 @@ header img {
     background-color: #c00; /* Color más oscuro al pasar el ratón */
 }
 
+.buy-ticket:hover {
+    background-color: #c00; /* Color más oscuro al pasar el ratón */
+}
+
 
 @media (min-width: 768px) {
     .main {
